--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,6 +74,7 @@ html {
 
   --background-color: var(--grey-50);
   --text-color: var(--grey-900);
+  --bs-body-color: var(--text-color);
   --background-secondary-color: var(--white);
   --text-secondary-color: var(--grey-500);
 }
@@ -83,6 +84,11 @@ html {
   --background-color: var(--dark-mode-bg-color);
   --text-secondary-color: var(--dark-mode-text-secondary-color);
   --background-secondary-color: var(--dark-mode-bg-secondary-color);
+  /*added by jas: */
+  --bs-body-bg: var(--dark-mode-bg-color);
+  --bs-body-color: var(--dark-mode-text-color);
+  --bs-table-bg: var(--dark-mode-bg-color);
+  --bs-table-color: var(--dark-mode-text-color);
 }
 
 body {
